--- a/new.html
+++ b/new.html
@@ -10,19 +10,19 @@
   <body>
     <div class="main">
       <div class="sub">
-        <img src="E:\Aslam\NanoDegree\Html\vivek.png" alt="Fuckoff🤷‍🤷‍ ">
+        <img src="vivek.png" alt="Fuckoff🤷‍🤷‍ ">
         <h6>Vivek Sketch Image 1
       </div>
       <div class="sub">
-        <img src="E:\Aslam\NanoDegree\Html\vivek.png" alt="Fuckoff🤷‍🤷‍ ">
+        <img src="vivek.png" alt="Fuckoff🤷‍🤷‍ ">
         <h6>Vivek Sketch Image 2
       </div>
       <div class="sub">
-        <img src="E:\Aslam\NanoDegree\Html\vivek.png" alt="Fuckoff🤷‍🤷‍ ">
+        <img src="vivek.png" alt="Fuckoff🤷‍🤷‍ ">
         <h6>Vivek Sketch Image 3
       </div>
       <div class="sub">
-        <img src="E:\Aslam\NanoDegree\Html\vivek.png" alt="Fuckoff🤷‍🤷‍ ">
+        <img src="vivek.png" alt="Fuckoff🤷‍🤷‍ ">
         <h6>Vivek Sketch Image 4
       </div>
     </div>
